@@ -1,3 +1,7 @@
+4
+
+* add 3 cards when you get stuck
+
 3
 
 * Eliminate naming alert from pre-0.86 toolbar
